fix(comp:pagination): pagination vertical align should be centered

--- a/packages/components/pagination/style/index.less
+++ b/packages/components/pagination/style/index.less
@@ -5,6 +5,7 @@
   .reset-component();
 
   display: flex;
+  align-items: center;
 
   &-item,
   &-total,
